--- a/package.json
+++ b/package.json
@@ -1,41 +1,28 @@
 {
-  "name": "nuxt-websites",
+  "name": "nux-mo--",
   "version": "1.0.0",
-  "description": "My ultimate Nuxt.js project",
-  "author": "mikoMa",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "nuxt --watch --open",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "start": "nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "yarn lint:js"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/style-resources": "^1.0.0",
-    "cross-env": "^5.2.0",
-    "element-ui": "^2.4.11",
-    "koa": "^2.6.2",
-    "node-sass": "^4.13.1",
-    "nuxt": "^2.0.0",
-    "sass-loader": "^8.0.2",
+    "@nuxtjs/axios": "^5.11.0",
+    "element-ui": "^2.13.2",
+    "nuxt": "^2.13.0",
     "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2",
-    "swiper": "^5.3.7",
-    "vue-awesome-swiper": "^4.1.1"
+    "stylus-loader": "^3.0.2"
   },
   "devDependencies": {
-    "@nuxt/typescript-build": "^0.6.0",
-    "@nuxtjs/eslint-config-typescript": "^1.0.0",
-    "@nuxtjs/eslint-module": "^1.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^6.1.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-plugin-prettier": "^3.1.2",
-    "nodemon": "^1.18.9",
-    "prettier": "^1.19.1",
+    "@nuxtjs/eslint-config": "^3.0.0",
+    "@nuxtjs/eslint-module": "^2.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.2.0",
+    "eslint-plugin-nuxt": "^1.0.0",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0"
   }
