--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.2.0",
     "eslint-plugin-nuxt": "^1.0.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "pug": "^2.0.4",
     "pug-plain-loader": "^1.0.0"
   }
